NEWS for the R Package Luminescence

Changes in version 0.8.0 ( ,2017):

  New functions:

         • ‘analyse_Al2O3_ITC()’: Function to analyse data determined
           to correct irradiation times as suggested by Kreutzer et
           al., 2017

         • ‘analyse_Al2O3_CrossTalk()’: Function to analyse data to
           analyse cross talk measurments as shown in Kreutzer et al.,
           2017

         • ‘calc_WodaFuchs2008()’: Function to obtain the equivalent
           dose using the approach proposed by Woda and Fuchs, 2008.

  Bugfixes and changes:

         • ‘dummy()’

             • dummy
